--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ import org.apache.tools.ant.filters.*
 
 apply plugin: 'java'
 apply plugin: 'idea'
+apply plugin: 'eclipse'
 
 	configurations.compile.transitive = true
 	compileJava.options.encoding = 'UTF-8'
@@ -20,10 +21,10 @@ apply plugin: 'idea'
 
 	dependencies {
 		compile 'org.apache.commons:commons-lang3:3.1'
-    compile 'commons-beanutils:commons-beanutils:1.8.3'
-    testCompile group: 'com.google.guava', name: 'guava', version: '20.0'
-    testCompile 'org.mockito:mockito-all:1.9.0'
-    testCompile 'de.bechte.junit:junit-hierarchicalcontextrunner:4.11.3'
+	    compile 'commons-beanutils:commons-beanutils:1.9.3'
+	    testCompile group: 'com.google.guava', name: 'guava', version: '20.0'
+	    testCompile 'org.mockito:mockito-all:1.9.0'
+	    testCompile 'de.bechte.junit:junit-hierarchicalcontextrunner:4.11.3'
 
   }
 
