--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,9 @@ apply plugin: 'eclipse'
 
 	dependencies {
 		compile 'org.apache.commons:commons-lang3:3.1'
-	    compile 'commons-beanutils:commons-beanutils:1.9.3'
+	    //compile 'commons-beanutils:commons-beanutils:1.9.3'
+	    compile group: 'commons-logging', name: 'commons-logging', version: '1.2'
+	    compile group: 'commons-collections', name: 'commons-collections', version: '3.2.2'
 	    testCompile group: 'com.google.guava', name: 'guava', version: '20.0'
 	    testCompile 'org.mockito:mockito-all:1.9.0'
 	    testCompile 'de.bechte.junit:junit-hierarchicalcontextrunner:4.11.3'
