--- a/build.gradle
+++ b/build.gradle
@@ -1,39 +1,100 @@
 import org.apache.tools.ant.filters.*
 
-	//ext.guavaVersion="15.0"
-	ext.junitVersion="4.11"
-	//ext.springVersion="3.1.1.RELEASE"
-
-
+ext.junitVersion="4.11"
+	
 apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'eclipse'
+apply plugin: 'maven'
+apply plugin: 'signing'
 
-	configurations.compile.transitive = true
-	compileJava.options.encoding = 'UTF-8'
+configurations.compile.transitive = true
+compileJava.options.encoding = 'UTF-8'
 	
-	sourceCompatibility = 1.7
-	version = '1.0'
+sourceCompatibility = 1.7
+group = "eu.qualityontime.commons"
+archivesBaseName = "q-beanutils"
+version = '0.8'
 	
-	repositories {
-		mavenCentral()
-	}
+repositories {
+	mavenCentral()
+}
 
-	dependencies {
-		compile 'org.apache.commons:commons-lang3:3.1'
-	    //compile 'commons-beanutils:commons-beanutils:1.9.3'
-	    compile group: 'commons-logging', name: 'commons-logging', version: '1.2'
-	    compile group: 'commons-collections', name: 'commons-collections', version: '3.2.2'
-	    testCompile group: 'com.google.guava', name: 'guava', version: '20.0'
-	    testCompile 'org.mockito:mockito-all:1.9.0'
-	    testCompile 'de.bechte.junit:junit-hierarchicalcontextrunner:4.11.3'
+dependencies {
+	compile 'org.apache.commons:commons-lang3:3.1'
+	compile group: 'commons-logging', name: 'commons-logging', version: '1.2'
+	compile group: 'commons-collections', name: 'commons-collections', version: '3.2.2'
+	testCompile group: 'com.google.guava', name: 'guava', version: '20.0'
+	testCompile 'org.mockito:mockito-all:1.9.0'
+	testCompile 'de.bechte.junit:junit-hierarchicalcontextrunner:4.11.3'
+}
 
+test{
+	testLogging{
+    	exceptionFormat='full'
+   	}
+}
+
+task javadocJar(type: Jar) {
+    classifier = 'javadoc'
+    from javadoc
+}
+
+task sourcesJar(type: Jar) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
+artifacts {
+    archives javadocJar, sourcesJar
+}
+
+//signing {
+//    sign configurations.archives
+//}
+
+uploadArchives {
+  repositories {
+    mavenDeployer {
+      beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
+
+      repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
+        authentication(userName: ossrhUsername, password: ossrhPassword)
+      }
+
+      snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
+        authentication(userName: ossrhUsername, password: ossrhPassword)
+      }
+
+      pom.project {
+        name 'Example Application'
+        packaging 'jar'
+        // optionally artifactId can be defined here 
+        description 'A application used as an example on how to set up 
+          pushing  its components to the Central Repository.'
+        url 'http://www.example.com/example-application'
+
+        scm {
+          connection 'scm:svn:http://foo.googlecode.com/svn/trunk/'
+          developerConnection 'scm:svn:https://foo.googlecode.com/svn/trunk/'
+          url 'http://foo.googlecode.com/svn/trunk/'
+        }
+
+        licenses {
+          license {
+            name 'The Apache License, Version 2.0'
+            url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+          }
+        }
+
+        developers {
+          developer {
+            id 'takacsot'
+            name 'Ottó Takács'
+            email 'manfred@sonatype.com'
+          }
+        }
+      }
+    }
   }
-
-  test{
-    testLogging{
-     exceptionFormat='full'
-   }
- }
-
-
+}
