--- a/build.gradle
+++ b/build.gradle
@@ -50,3 +50,46 @@ signing {
     sign configurations.archives
 }
 
+uploadArchives {
+  repositories {
+    mavenDeployer {
+      beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
+
+      repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
+        authentication(userName: ossrhUsername, password: ossrhPassword)
+      }
+
+      snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
+        authentication(userName: ossrhUsername, password: ossrhPassword)
+      }
+
+      pom.project {
+        name 'q-beanutils'
+        packaging 'jar'
+        description 'jakarta beanutils replacement with steroids'
+        url 'https://github.com/takacsot/q-beanutils'
+
+        scm {
+          connection 'scm:git:git://github.com/takacsot/q-beanutils.git'
+          developerConnection 'scm:git:ssh://github.com/takacsot/q-beanutils.git'
+          url 'https://github.com/takacsot/q-beanutils'
+        }
+
+        licenses {
+          license {
+            name 'The Apache License, Version 2.0'
+            url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+          }
+        }
+
+        developers {
+          developer {
+            id 'takacsot'
+            name 'Otto TAKACS'
+            email 'otto.takacs@qualityontime.eu'
+          }
+        }
+      }
+    }
+  }
+}
